Set default non-empty reason for screen saver inhibition

Gnome Session Manager is unhappy when something tries to inhibit the
screensaver with no reason, so add a default reason to never inhibit
with an empty one.

This should fix Gwenview hanging when switching to fullscreen viewing in
non-Plasma DE's.

REVIEW: 125910
BUG: 334525
FIXED-IN: 5.18
CHANGELOG: Set default non-empty reason for screen saver inhibition;
should fix Gwenview hanging up when switching to fullscreen in non-
Plasma DE's